--- a/views/results/index.jade
+++ b/views/results/index.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-
-  div(class="row")
-    div(class="span12")
-      h1= "Latest Trends"
+  div(class="container")
+    div(class="row-fluid")
+      div(class="span12")
+        h1= "Latest Trends"
