--- a/views/results/show.jade
+++ b/views/results/show.jade
@@ -1,32 +1,35 @@
 extends ../layout
 
 block head
-  script(src='/libs/underscore/underscore-min.js')
-  script(src='/libs/backbone/backbone-min.js')
-  script(src='/libs/openlayers/build/ol.js')
-  script(src='/js/map.js')
-  link(rel='stylesheet', href='/libs/openlayers/build/ol.css', type='text/css')
+  if typeof answers !== 'undefined' && answers != ''
+    script(src='/libs/underscore/underscore-min.js')
+    script(src='/libs/backbone/backbone-min.js')
+    script(src='/libs/openlayers/build/ol.js')
+    script(src='/js/map.js')
+    link(rel='stylesheet', href='/libs/openlayers/build/ol.css', type='text/css')
   
-
-
 block content
 
   div(class="row-fluid")
     div(class="span12")
       h1= question.value
 
-  div(class="row-fluid")
-    div(class="span12")
-      ul(class="answer_graph")
-        li(style="width:" + yesWidth + "%;", class="answers yes")
-          h2= 'Yes (' + yesWidth + ')'
-        li(style="width:" + noWidth + "%;", class="answers no")
-          h2= 'No (' + noWidth + ')'
-      div(class='clear')
+  if typeof answers !== 'undefined' && answers != ''
+    div(class="row-fluid")
+      div(class="span12")
+        ul(class="answer_graph")
+          if yesWidth !== 0
+            li(style="width:" + yesWidth + "%;", class="answers yes")
+              h2= 'Yes (' + yesWidth + ')'
+          if noWidth !== 0
+            li(style="width:" + noWidth + "%;", class="answers no")
+              h2= 'No (' + noWidth + ')'
+        div(class='clear')
 
-  div(class="row-fluid")
-    div(class="span12")
-      .map
-        div(id="map")
-
-
+    div(class="row-fluid")
+      div(class="span12")
+        .map
+          div(id="map")
+  else 
+    p.alert.alert-block 
+      = 'No votes have been collected'
