Fixed fittext on results

--- a/views/results/show.jade
+++ b/views/results/show.jade
@@ -20,10 +20,10 @@ block content
           ul(class="answer_graph")
             if yesWidth !== 0
               li(style="width:" + yesWidth + "%;", class="answers yes")
-                h2(data-fit-text)= 'Yes (' + yesWidth + ')'
+                h2= 'Yes (' + yesWidth + ')'
             if noWidth !== 0
               li(style="width:" + noWidth + "%;", class="answers no")
-                h2(data-fit-text)= 'No (' + noWidth + ')'
+                h2= 'No (' + noWidth + ')'
 
       div(class="row-fluid")
         div(class="span12")
