--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,7 +20,8 @@ article.question form input,article.question form button{font-size:2em;padding-t
 article.question form button{width:100%;padding:.5em 0;vertical-align:top;height:auto}
 @media (max-width: 767px){article.question{margin:0 -20px;padding:20px;}
 article.question header h1,article.question header h2,article.question header h3,article.question header h4,article.question header h5,article.question header h6{font-size:3em}
-}#map{height:500px}
+}#map{height:500px;}
+#map img{max-width:none}
 ul.answer_graph{margin:0;padding:0;position:relative}
 ul.answer_graph{margin:0;padding:0;position:relative;}
 ul.answer_graph li{margin:0;padding:0;list-style-type:none;float:left;}
