Playing around with ideas for map.

--- a/views/results/gshow.jade
+++ b/views/results/gshow.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../glayout
 
 block head
   if typeof answers !== 'undefined' && answers != ''
@@ -6,27 +6,19 @@ block head
     script(src='/js/gmap.js')
   
 block content
-  div(class="container")
-    div(class="row-fluid")
-      div(class="span12")
-        h1(data-question-id=question.id)= question.value
-
-    if typeof answers !== 'undefined' && answers != ''
-      div(class="row-fluid")
-        div(class="span12")
-          ul(class="answer_graph")
-            if yesWidth !== 0
-              li(style="width:" + yesWidth + "%;", class="answers yes")
-                h2= 'Yes (' + yesWidth + ')'
-            if noWidth !== 0
-              li(style="width:" + noWidth + "%;", class="answers no")
-                h2= 'No (' + noWidth + ')'
-
-      div(class="row-fluid")
-        div(class="span12")
-          .map
-            div(id="map")
-          
-    else 
-      p.alert.alert-block 
-        = 'No votes have been collected'
+  article.result
+    #map
+    header
+      h1(data-question-id=question.id)= question.value
+    footer
+      if typeof answers !== 'undefined' && answers != ''
+        ul(class="answer_graph")
+          if yesWidth !== 0
+            li(style="width:" + yesWidth + "%;", class="answers yes")
+              h2= 'Yes (' + yesWidth + ')'
+          if noWidth !== 0
+            li(style="width:" + noWidth + "%;", class="answers no")
+              h2= 'No (' + noWidth + ')'      
+      else 
+        p.alert.alert-block 
+          = 'No votes have been collected'
