--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,11 @@ ul.answer_graph li.yes{left:0;}
 ul.answer_graph li.yes h2{background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #55aa4f), color-stop(1, #4b9646));background:-webkit-linear-gradient(top, #55aa4f 0%, #4b9646 100%);background:-moz-linear-gradient(top, #55aa4f 0%, #4b9646 100%);background:-o-linear-gradient(top, #55aa4f 0%, #4b9646 100%);background:-ms-linear-gradient(top, #55aa4f 0%, #4b9646 100%);background:linear-gradient(top, #55aa4f 0%, #4b9646 100%)}
 ul.answer_graph li.no{right:0;text-align:right;}
 ul.answer_graph li.no h2{background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #aa554f), color-stop(1, #964b46));background:-webkit-linear-gradient(top, #aa554f 0%, #964b46 100%);background:-moz-linear-gradient(top, #aa554f 0%, #964b46 100%);background:-o-linear-gradient(top, #aa554f 0%, #964b46 100%);background:-ms-linear-gradient(top, #aa554f 0%, #964b46 100%);background:linear-gradient(top, #aa554f 0%, #964b46 100%)}
+body.glayout article.result #map{position:absolute;top:60px;left:0;right:0;bottom:40px;height:auto;width:auto}
+body.glayout article.result header{position:absolute;top:120px;right:5px;width:auto;max-width:50%;background-color:rgba(0,0,0,0.5);padding:20px;}
+body.glayout article.result header h1{font-size:4em;font-weight:bold;color:#fff;text-shadow:0 -1px 0 rgba(0,0,0,0.5);margin:0 0 0 0;padding:0 0 0 0}
+body.glayout article.result footer{position:absolute;left:0;right:0;bottom:0;height:auto;width:auto;}
+body.glayout article.result footer ul.answer_graph h2{font-size:1em;margin:0 0 0 0}
 .ask-question{text-align:center;}
 .ask-question h1{font-size:72px;line-height:1}
 .overlay{display:none;font-size:10pt}
