--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -181,6 +181,56 @@ ul.answer_graph {
     }
   }
 }
+
+/* Google Map */
+body.glayout {
+  article.result {
+    #map {
+      position: absolute;
+      top: 60px;
+      left: 0;
+      right: 0;
+      bottom: 40px;
+      height: auto;
+      width: auto;
+    }
+    
+    header {
+      position: absolute;
+      top: 120px;
+      right: 5px;
+      width: auto;
+      max-width: 50%;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 20px;
+    
+      h1 {
+        font-size: 4em;
+        font-weight: bold;
+        color: white;
+        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+        margin: 0 0 0 0;
+        padding: 0 0 0 0;
+      }
+    }
+    
+    footer {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: auto;
+      width: auto;
+      
+      ul.answer_graph {
+        h2 {
+          font-size: 1em;
+          margin: 0 0 0 0;
+        }
+      }
+    }
+  }
+}
   
 
 .ask-question {
