--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -190,28 +190,9 @@ body.glayout {
       top: 60px;
       left: 0;
       right: 0;
-      bottom: 40px;
+      bottom: 0;
       height: auto;
       width: auto;
-    }
-    
-    header {
-      position: absolute;
-      top: 120px;
-      right: 5px;
-      width: auto;
-      max-width: 50%;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 20px;
-    
-      h1 {
-        font-size: 4em;
-        font-weight: bold;
-        color: white;
-        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
-        margin: 0 0 0 0;
-        padding: 0 0 0 0;
-      }
     }
     
     footer {
@@ -221,12 +202,20 @@ body.glayout {
       bottom: 0;
       height: auto;
       width: auto;
+      background: rgba(0, 0, 0, 0.85);
+      padding: 20px 0;
       
-      ul.answer_graph {
-        h2 {
-          font-size: 1em;
-          margin: 0 0 0 0;
-        }
+      h1 {
+        font-size: 18px;
+        color: white;
+        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+        margin: 0 0;
+      }
+      
+      li {
+        color: white;
+        text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+        text-align: right;
       }
     }
   }
