Changed route and title in navbar.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,7 +34,7 @@ html
               li.active
                 a(href='/') Home
               li
-                a(href='/questions') Trending Questions 
+                a(href='/results') Trending Answers 
 
     include shared/notices
 
