--- a/views/glayout.jade
+++ b/views/glayout.jade
@@ -34,6 +34,6 @@ html
               li.active
                 a(href='/') Home
               li
-                a(href='/questions') Trending Questions 
+                a(href='/results') Trending Answers 
 
     block content
