--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 body{background:#fff;padding:80px 25px 20px 25px}
-@media (max-width: 979px){body{padding-top:0}
+@media (max-width: 979px){body{padding-top:0;padding-left:0;padding-right:0}
+}@media (max-width: 767px){body{padding-right:20px;padding-left:20px}
 }a{color:#00b7ff}
 .btn.btn-primary{background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #474747), color-stop(1, #262626));background:-webkit-linear-gradient(top, #474747 0%, #262626 100%);background:-moz-linear-gradient(top, #474747 0%, #262626 100%);background:-o-linear-gradient(top, #474747 0%, #262626 100%);background:-ms-linear-gradient(top, #474747 0%, #262626 100%);background:linear-gradient(top, #474747 0%, #262626 100%)}
 .navbar.navbar-inverse{margin-bottom:0;}
@@ -31,7 +32,7 @@ ul.answer_graph li.yes h2{background:-webkit-gradient(linear, left top, left bot
 ul.answer_graph li.no{right:0;text-align:right;}
 ul.answer_graph li.no h2{background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #aa554f), color-stop(1, #964b46));background:-webkit-linear-gradient(top, #aa554f 0%, #964b46 100%);background:-moz-linear-gradient(top, #aa554f 0%, #964b46 100%);background:-o-linear-gradient(top, #aa554f 0%, #964b46 100%);background:-ms-linear-gradient(top, #aa554f 0%, #964b46 100%);background:linear-gradient(top, #aa554f 0%, #964b46 100%)}
 body.glayout article.result #map{position:absolute;top:60px;left:0;right:0;bottom:0;height:auto;width:auto}
-body.glayout article.result footer{position:absolute;left:0;right:0;bottom:0;height:auto;width:auto;background:rgba(0,0,0,0.85);padding:20px 0;}
+body.glayout article.result footer{position:absolute;left:0;right:0;bottom:0;height:auto;width:auto;background:rgba(0,0,0,0.85);padding:20px 15px;}
 body.glayout article.result footer h1{font-size:18px;color:#fff;text-shadow:0 -1px 0 rgba(0,0,0,0.5);margin:0 0}
 body.glayout article.result footer li{color:#fff;text-shadow:0 -1px 0 rgba(0,0,0,0.5);text-align:right}
 .ask-question{text-align:center;}
