--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -13,6 +13,15 @@ body {
 @media (max-width: 979px) {
   body {
     padding-top: 0;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  body {
+    padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
@@ -203,7 +212,7 @@ body.glayout {
       height: auto;
       width: auto;
       background: rgba(0, 0, 0, 0.85);
-      padding: 20px 0;
+      padding: 20px 15px;
       
       h1 {
         font-size: 18px;
