--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -74,6 +74,15 @@ a {
 	}
 }
 
+/*
+ * Stacked nav bar style
+ */
+.nav.nav-tabs.nav-stacked {
+  [class*='span'] {
+    min-height: 0;
+  }
+}
+
 @media (min-width: 980px) {
 	.navbar.navbar-inverse {
 		.brand {
