Refactored poster create into its own route and made it work on a POST request for better security.

--- a/views/questions/show.jade
+++ b/views/questions/show.jade
@@ -13,9 +13,10 @@ block content
           li= "Click the 'Create Poster' button to generate a poster. It will create a PDF that you can save."
           li= "Print copies of your poster and place them around town. Remember to only post them where permitted."
           li= "Come back here and click the 'View Results' button to see how people answered your question."
-        p
-          a(href="/poster/create/#{question.id}", class="btn btn-large btn-primary")
-            = "Create Poster"
-          = "&nbsp;"
-          a(href="/results/#{question.id}", class="btn btn-large")
-            = "View Results"
+        form(action='/poster/#{question.id}', method='post')
+          .form-actions
+            button(class='btn btn-large btn-primary')
+              = "Create Poster"
+            = "&nbsp;"
+            a(href="/results/#{question.id}", class="btn btn-large")
+              = "View Results"
