--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -124,10 +124,12 @@ article.question {
   form {
     input, button {
       font-size: 2em;
-      padding-top: 1em;
-      padding-bottom: 1em;
       line-height: 1em;
-      height: 1em;
+    }
+
+    input {
+      height: auto;
+      padding: .5em;
     }
 
     button {
