Fix #9 - Specify on home page that question must be yes-or-no

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,3 +15,7 @@ block content
           .span4
             button(class="btn btn-primary")
               = "Ask it!"
+      .row-fluid
+        .span8
+          p
+            em Must be a yes-or-no question limited to 140 characters.
