Put back number of votes

--- a/views/questions/index.jade
+++ b/views/questions/index.jade
@@ -16,5 +16,8 @@ block content
             li
               a(href="/results/#{question.id}")
                 .row-fluid
-                  .span12
+                  .span8
                     = question.value
+                  .span4
+                    = question.numAnswers
+                    = (question.numAnswers == 1) ? " vote" : " votes"
