--- a/views/about.jade
+++ b/views/about.jade
@@ -40,4 +40,10 @@ block content
              a(href="http://twitter.com/atomek") @atomek
             li Trevor Twining 
              a(href="http://twitter.com/trevortwining") @trevortwining
- 
+          p
+           | Vote In Public is generously powered by the 
+           a(href="http://furi.ca/") Furi Cloud
+           | .
+          p
+           a(href="http://furi.ca/") 
+            img(src="http://furi.ca/powered.jpg")
