changed JF's link to his website

--- a/views/about.jade
+++ b/views/about.jade
@@ -31,7 +31,7 @@ block content
             li Dennis Ideler 
              a(href="http://twitter.com/dideler") @dideler
             li JF Amprimoz 
-             a(href="http://twitter.com/SmallWebStrat") @SmallWebStrat
+             a(href="http://smallwebstrategies.com/") @SmallWebStrat
             li Michael Mottola 
              a(href="http://twitter.com/michael_mottola") @michael_mottola
             li Nickolas Kenyeres 
